# labelo-ios

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  PRIVACY.md  Package.resolved  Package.swift  README.md  xcode.bazelrc
.bazel_vendored/: @apple_support~.marker  @bazel_features~.marker  @bazel_skylib~.marker  @buildifier_prebuilt~.marker  @buildifier_prebuilt~~buildifier_prebuilt_deps_extension~buildifier_prebuilt_toolchains.marker  @cgrindel_bazel_starlib~.marker  @nlohmann_json~.marker  @platforms.marker  @platforms~host_platform~host_platform.marker  @rules_apple~.marker  @rules_apple~~non_module_deps~xctestrunner.marker  @rules_cc~.marker  @rules_go~.marker  @rules_go~~go_sdk~go_toolchains.marker  @rules_java~.marker  @rules_license~.marker  @rules_python~.marker  @rules_python~~internal_deps~rules_python_internal.marker  @rules_python~~python~python_3_11_aarch64-apple-darwin.marker  @rules_python~~python~pythons_hub.marker  @rules_swift_package_manager~.marker  @rules_swift_package_manager~~swift_deps~swiftpkg_combine_schedulers.marker  @rules_swift_package_manager~~swift_deps~swiftpkg_swift_case_paths.marker  @rules_swift_package_manager~~swift_deps~swiftpkg_swift_clocks.marker  @rules_swift_package_manager~~swift_deps~swiftpkg_swift_collections.marker  @rules_swift_package_manager~~swift_deps~swiftpkg_swift_composable_architecture.marker  @rules_swift_package_manager~~swift_deps~swiftpkg_swift_concurrency_extras.marker  @rules_swift_package_manager~~swift_deps~swiftpkg_swift_custom_dump.marker  @rules_swift_package_manager~~swift_deps~swiftpkg_swift_dependencies.marker  @rules_swift_package_manager~~swift_deps~swiftpkg_swift_identified_collections.marker  @rules_swift_package_manager~~swift_deps~swiftpkg_swift_navigation.marker  @rules_swift_package_manager~~swift_deps~swiftpkg_swift_perception.marker  @rules_swift_package_manager~~swift_deps~swiftpkg_swift_syntax.marker  @rules_swift_package_manager~~swift_deps~swiftpkg_xctest_dynamic_overlay.marker  @rules_swift~.marker  @rules_swift~~non_module_deps~build_bazel_rules_swift_index_import.marker  @rules_xcodeproj~.marker  @rules_xcodeproj~~internal~rules_xcodeproj_generated.marker  bazel-external
.bazel_vendored/rules_go~~go_sdk~go_toolchains/: BUILD.bazel
.bazel_vendored/rules_python~~python~pythons_hub/: BUILD.bazel  interpreters.bzl
.bazel_vendored/rules_swift_package_manager~~swift_deps~swiftpkg_combine_schedulers/: BUILD.bazel  WORKSPACE  desc.json  dump.json  pkg_info.json
.bazel_vendored/rules_swift_package_manager~~swift_deps~swiftpkg_swift_case_paths/: BUILD.bazel  WORKSPACE  desc.json  dump.json  pkg_info.json
.bazel_vendored/rules_swift_package_manager~~swift_deps~swiftpkg_swift_clocks/: BUILD.bazel  WORKSPACE  desc.json  dump.json  pkg_info.json
.bazel_vendored/rules_swift_package_manager~~swift_deps~swiftpkg_swift_collections/: BUILD.bazel  WORKSPACE  desc.json  dump.json  pkg_info.json
.bazel_vendored/rules_swift_package_manager~~swift_deps~swiftpkg_swift_composable_architecture/: BUILD.bazel  WORKSPACE  desc.json  dump.json  pkg_info.json
.bazel_vendored/rules_swift_package_manager~~swift_deps~swiftpkg_swift_concurrency_extras/: BUILD.bazel  WORKSPACE  desc.json  dump.json  pkg_info.json
.bazel_vendored/rules_swift_package_manager~~swift_deps~swiftpkg_swift_custom_dump/: BUILD.bazel  WORKSPACE  desc.json  dump.json  pkg_info.json
.bazel_vendored/rules_swift_package_manager~~swift_deps~swiftpkg_swift_dependencies/: BUILD.bazel  WORKSPACE  desc.json  dump.json  pkg_info.json
.bazel_vendored/rules_swift_package_manager~~swift_deps~swiftpkg_swift_identified_collections/: BUILD.bazel  WORKSPACE  desc.json  dump.json  pkg_info.json
.bazel_vendored/rules_swift_package_manager~~swift_deps~swiftpkg_swift_navigation/: BUILD.bazel  WORKSPACE  desc.json  dump.json  pkg_info.json
.bazel_vendored/rules_swift_package_manager~~swift_deps~swiftpkg_swift_perception/: BUILD.bazel  WORKSPACE  desc.json  dump.json  pkg_info.json
.bazel_vendored/rules_swift_package_manager~~swift_deps~swiftpkg_swift_syntax/: BUILD.bazel  WORKSPACE  desc.json  dump.json  pkg_info.json
.bazel_vendored/rules_swift_package_manager~~swift_deps~swiftpkg_xctest_dynamic_overlay/: BUILD.bazel  WORKSPACE  desc.json  dump.json  pkg_info.json
.github/workflows/: main.yml
Labelo/: BUILD.bazel
Labelo.xcodeproj/: project.pbxproj
Labelo/Assets/Assets.xcassets/AppIcon.appiconset/: Contents.json
Labelo/Resources/: Info.plist
Labelo/Sources/: LabeloApp.swift
Labelo/Sources/Components/: ErrorMessage.swift
Labelo/Sources/Dependencies/Database/: Database.swift  LiveDatabase.swift
Labelo/Sources/Dependencies/NFC/: LiveNFCSession.swift  NFCSessionClient.swift
Labelo/Sources/Dependencies/Speech/: LiveSpeech.swift  Speech.swift
Labelo/Sources/Features/App/: AppFeature.swift  AppView.swift
Labelo/Sources/Features/ReadResult/: ReadResultFeature.swift  ReadResultView.swift
Labelo/Sources/Features/Settings/: SettingsFeature.swift  SettingsView.swift
Labelo/Sources/Features/TagCreate/: TagCreateFeature.swift
Labelo/Sources/Features/TagDetails/: TagDetailsFeature.swift  TagDetailsView.swift
Labelo/Sources/Features/TagList/: TagListFeature.swift  TagListView.swift
Labelo/Sources/Model/: HistoryEntry.swift  Scheme.swift  Tag.swift
Labelo/Sources/ReadResult/: ReadResultView.swift
Labelo/Sources/Services/Database/: Database.swift  LiveDatabase.swift
Labelo/Sources/Services/NFC/: LiveNFCSession.swift  NFCSessionClient.swift
Labelo/Sources/TagCreate/: TagCreateFeature.swift  TagCreateView.swift
Labelo/Sources/TagDetails/: TagDetailsFeature.swift  TagDetailsView.swift
Labelo/Sources/TagList/: Tag.swift  TagListFeature.swift  TagListView.swift
Labelo/Tests/: LabeloTests.swift  TagListTests.swift
LabeloTests/: BUILD.bazel  ReadResultTests.swift  TagCreateTests.swift  TagListTests.swift
patches/: provisioning_profiles.patch  rules_swift-set-platform-version.patch  rules_swift_package_manager-set-platform-version.patch
profiles/: provisioning_profile.mobileprovision
tools/: bazel  shared.bzl
(+58 files in other folders)
