load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
)

filegroup(
    name = "profiles",
    srcs = glob([
        "profiles/*.mobileprovision",
    ]),
    visibility = ["//visibility:public"],
)

# Xcode

xcodeproj(
    name = "xcodeproj",
    adjust_schemes_for_swiftui_previews = True,
    generation_mode = "incremental",
    project_name = "Labelo",
    tags = ["manual"],
    top_level_targets = [
        top_level_target(
            "//Labelo",
            target_environments = [
                "simulator",
                "device",
            ],
        ),
        top_level_target(
            "//Labelo:Tests",
            target_environments = [
                "simulator",
                "device",
            ],
        ),
    ],
)
