load("@build_bazel_rules_apple//apple:apple.bzl", "local_provisioning_profile")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application", "ios_unit_test")
load("@build_bazel_rules_apple//apple:versioning.bzl", "apple_bundle_version")
load("@build_bazel_rules_apple//apple:xcarchive.bzl", "xcarchive")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@rules_xcodeproj//xcodeproj:defs.bzl", "xcode_provisioning_profile")
load("//tools:shared.bzl", "app_info", "versions")

# Version
apple_bundle_version(
    name = "Version",
    build_version = "0.0.1",
    short_version_string = "1.0",
)

# Code

swift_library(
    name = "labelo.library",
    srcs = glob(["Sources/**/*.swift"]),
    module_name = "Labelo",
    visibility = ["//visibility:public"],
    deps = [
        "@swiftpkg_swift_composable_architecture//:ComposableArchitecture",
    ],
)

xcode_provisioning_profile(
    name = "xcode_profile",
    managed_by_xcode = True,
    provisioning_profile = ":provisioning_profile",
)

local_provisioning_profile(
    name = "provisioning_profile",
    profile_name = "iOS Team Provisioning Profile: app.labelo.labelo",
    team_id = "RK3RLP5S33",
)

local_provisioning_profile(
    name = "release_provisioning_profile",
    profile_name = "Labelo iOS App Store",
    team_id = "RK3RLP5S33",
)

# Packaging

ios_application(
    name = "Labelo",
    app_icons = glob(["Assets/Assets.xcassets/AppIcon.appiconset/**"]),
    bundle_id = app_info.bundle_id,
    bundle_name = app_info.bundle_name,
    entitlements = "Labelo.entitlements",
    executable_name = app_info.executable_name,
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Resources/Info.plist"],
    minimum_os_version = versions.minimum_ios_version,
    provisioning_profile = ":xcode_profile",
    resources = glob(
        [
            "Assets/Assets.xcassets/**",
        ],
        exclude = ["Assets/Assets.xcassets/AppIcon.appiconset/**"],
    ),
    # Add localizable assets here.
    # strings = glob(["*.lproj/Localizable.strings"]),
    version = ":Version",
    visibility = [
        "//:__subpackages__",
        "@rules_xcodeproj//xcodeproj:generated",
    ],
    deps = [
        ":labelo.library",
    ],
)

# Tests

ios_unit_test(
    name = "Tests",
    bundle_id = "app.labelo.LabeloTests",
    minimum_os_version = "18.2",
    runner = "@build_bazel_rules_apple//apple/testing/default_runner:ios_xctestrun_ordered_runner",
    test_host = ":Labelo",
    visibility = ["@rules_xcodeproj//xcodeproj:generated"],
    deps = [":Tests.library"],
)

swift_library(
    name = "Tests.library",
    testonly = True,
    srcs = glob(["Tests/**/*.swift"]),
    module_name = "LabeloTests",
    deps = [
        ":labelo.library",
    ],
)

# Release
# Version
apple_bundle_version(
    name = "release_version",
    build_version = "0.0.4",
    short_version_string = "1.0",
)

ios_application(
    name = "LabeloRelease",
    app_icons = glob(["Assets/Assets.xcassets/AppIcon.appiconset/**"]),
    bundle_id = app_info.bundle_id,
    bundle_name = app_info.bundle_name,
    entitlements = "Labelo.entitlements",
    executable_name = app_info.executable_name,
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Resources/Info.plist"],
    minimum_os_version = versions.minimum_ios_version,
    provisioning_profile = "prod_provision.mobileprovision",
    resources = glob(
        [
            "Assets/Assets.xcassets/**",
        ],
        exclude = ["Assets/Assets.xcassets/AppIcon.appiconset/**"],
    ),
    # Add localizable assets here.
    # strings = glob(["*.lproj/Localizable.strings"]),
    version = ":release_version",
    visibility = [
        "//:__subpackages__",
        "@rules_xcodeproj//xcodeproj:generated",
    ],
    deps = [
        ":labelo.library",
    ],
)

# Archive

xcarchive(
    name = "Labelo.xcarchive",
    bundle = ":Labelo",
)
