load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

ios_unit_test(
    name = "LabeloTests",
    bundle_id = "app.labelo.LabeloTests",
    minimum_os_version = "18.0",
    test_host = "//Labelo:Labelo",
    visibility = ["@rules_xcodeproj//xcodeproj:generated"],
    deps = [":LabeloTests.library"],
)

swift_library(
    name = "LabeloTests.library",
    srcs = glob(["**/*.swift"]),
    module_name = "LabeloTests",
    testonly = True,
    deps = [
        "//Labelo:labelo.library",
    ],
)