
toolchain(
    name = "_0000_python_3_11_aarch64-apple-darwin_toolchain",
    target_compatible_with = ["@platforms//os:macos", "@platforms//cpu:aarch64"],
    target_settings = [],
    toolchain = "@python_3_11_aarch64-apple-darwin//:python_runtimes",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

toolchain(
    name = "_0000_python_3_11_aarch64-apple-darwin_py_cc_toolchain",
    target_compatible_with = ["@platforms//os:macos", "@platforms//cpu:aarch64"],
    target_settings = [],
    toolchain = "@python_3_11_aarch64-apple-darwin//:py_cc_toolchain",
    toolchain_type = "@rules_python//python/cc:toolchain_type",

)

toolchain(
    name = "_0000_python_3_11_aarch64-unknown-linux-gnu_toolchain",
    target_compatible_with = ["@platforms//os:linux", "@platforms//cpu:aarch64"],
    target_settings = [],
    toolchain = "@python_3_11_aarch64-unknown-linux-gnu//:python_runtimes",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

toolchain(
    name = "_0000_python_3_11_aarch64-unknown-linux-gnu_py_cc_toolchain",
    target_compatible_with = ["@platforms//os:linux", "@platforms//cpu:aarch64"],
    target_settings = [],
    toolchain = "@python_3_11_aarch64-unknown-linux-gnu//:py_cc_toolchain",
    toolchain_type = "@rules_python//python/cc:toolchain_type",

)

toolchain(
    name = "_0000_python_3_11_ppc64le-unknown-linux-gnu_toolchain",
    target_compatible_with = ["@platforms//os:linux", "@platforms//cpu:ppc"],
    target_settings = [],
    toolchain = "@python_3_11_ppc64le-unknown-linux-gnu//:python_runtimes",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

toolchain(
    name = "_0000_python_3_11_ppc64le-unknown-linux-gnu_py_cc_toolchain",
    target_compatible_with = ["@platforms//os:linux", "@platforms//cpu:ppc"],
    target_settings = [],
    toolchain = "@python_3_11_ppc64le-unknown-linux-gnu//:py_cc_toolchain",
    toolchain_type = "@rules_python//python/cc:toolchain_type",

)

toolchain(
    name = "_0000_python_3_11_s390x-unknown-linux-gnu_toolchain",
    target_compatible_with = ["@platforms//os:linux", "@platforms//cpu:s390x"],
    target_settings = [],
    toolchain = "@python_3_11_s390x-unknown-linux-gnu//:python_runtimes",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

toolchain(
    name = "_0000_python_3_11_s390x-unknown-linux-gnu_py_cc_toolchain",
    target_compatible_with = ["@platforms//os:linux", "@platforms//cpu:s390x"],
    target_settings = [],
    toolchain = "@python_3_11_s390x-unknown-linux-gnu//:py_cc_toolchain",
    toolchain_type = "@rules_python//python/cc:toolchain_type",

)

toolchain(
    name = "_0000_python_3_11_x86_64-apple-darwin_toolchain",
    target_compatible_with = ["@platforms//os:macos", "@platforms//cpu:x86_64"],
    target_settings = [],
    toolchain = "@python_3_11_x86_64-apple-darwin//:python_runtimes",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

toolchain(
    name = "_0000_python_3_11_x86_64-apple-darwin_py_cc_toolchain",
    target_compatible_with = ["@platforms//os:macos", "@platforms//cpu:x86_64"],
    target_settings = [],
    toolchain = "@python_3_11_x86_64-apple-darwin//:py_cc_toolchain",
    toolchain_type = "@rules_python//python/cc:toolchain_type",

)

toolchain(
    name = "_0000_python_3_11_x86_64-pc-windows-msvc_toolchain",
    target_compatible_with = ["@platforms//os:windows", "@platforms//cpu:x86_64"],
    target_settings = [],
    toolchain = "@python_3_11_x86_64-pc-windows-msvc//:python_runtimes",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

toolchain(
    name = "_0000_python_3_11_x86_64-pc-windows-msvc_py_cc_toolchain",
    target_compatible_with = ["@platforms//os:windows", "@platforms//cpu:x86_64"],
    target_settings = [],
    toolchain = "@python_3_11_x86_64-pc-windows-msvc//:py_cc_toolchain",
    toolchain_type = "@rules_python//python/cc:toolchain_type",

)

toolchain(
    name = "_0000_python_3_11_x86_64-unknown-linux-gnu_toolchain",
    target_compatible_with = ["@platforms//os:linux", "@platforms//cpu:x86_64"],
    target_settings = [],
    toolchain = "@python_3_11_x86_64-unknown-linux-gnu//:python_runtimes",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

toolchain(
    name = "_0000_python_3_11_x86_64-unknown-linux-gnu_py_cc_toolchain",
    target_compatible_with = ["@platforms//os:linux", "@platforms//cpu:x86_64"],
    target_settings = [],
    toolchain = "@python_3_11_x86_64-unknown-linux-gnu//:py_cc_toolchain",
    toolchain_type = "@rules_python//python/cc:toolchain_type",

)
