load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library", "swift_library_group")
load("@rules_license//rules:license.bzl", "license")
load("@rules_license//rules:package_info.bzl", "package_info")
load("@rules_swift_package_manager//swiftpkg:build_defs.bzl", "generate_modulemap")

package(
    default_package_metadata = [
        ":license.rspm",
        ":package_info.rspm",
    ],
)

exports_files(["pkg_info.json"])

generate_modulemap(
    name = "CombineSchedulers.rspm_modulemap",
    deps = [],
    hdrs = [":CombineSchedulers.rspm"],
    module_name = "CombineSchedulers",
    visibility = ["//:__subpackages__"],
)

license(
    name = "license.rspm",
    license_text = "LICENSE",
)

package_info(
    name = "package_info.rspm",
    package_name = "combine-schedulers",
    package_url = "https://github.com/pointfreeco/combine-schedulers",
    package_version = "1.0.2",
)

swift_library(
    name = "CombineSchedulers.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_concurrency_extras//:ConcurrencyExtras",
        "@swiftpkg_xctest_dynamic_overlay//:IssueReporting",
    ],
    generates_header = True,
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "CombineSchedulers",
    package_name = "combine-schedulers",
    srcs = [
        "Sources/CombineSchedulers/AnyScheduler.swift",
        "Sources/CombineSchedulers/Concurrency.swift",
        "Sources/CombineSchedulers/ImmediateScheduler.swift",
        "Sources/CombineSchedulers/Internal/Deprecations.swift",
        "Sources/CombineSchedulers/Internal/Lock.swift",
        "Sources/CombineSchedulers/Internal/NSRecursiveLock.swift",
        "Sources/CombineSchedulers/SwiftUI.swift",
        "Sources/CombineSchedulers/TestScheduler.swift",
        "Sources/CombineSchedulers/Timer.swift",
        "Sources/CombineSchedulers/UIKit.swift",
        "Sources/CombineSchedulers/UIScheduler.swift",
        "Sources/CombineSchedulers/UnimplementedScheduler.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library_group(
    name = "CombineSchedulers",
    deps = [
        "@swiftpkg_combine_schedulers//:CombineSchedulers.rspm",
        "@swiftpkg_combine_schedulers//:CombineSchedulers.rspm_modulemap",
    ],
    visibility = ["//visibility:public"],
)
