load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library", "swift_library_group")
load("@rules_license//rules:license.bzl", "license")
load("@rules_license//rules:package_info.bzl", "package_info")

package(
    default_package_metadata = [
        ":license.rspm",
        ":package_info.rspm",
    ],
)

exports_files(["pkg_info.json"])

license(
    name = "license.rspm",
    license_text = "LICENSE",
)

package_info(
    name = "package_info.rspm",
    package_name = "swift-clocks",
    package_url = "https://github.com/pointfreeco/swift-clocks",
    package_version = "1.0.5",
)

swift_library(
    name = "Clocks.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_concurrency_extras//:ConcurrencyExtras",
        "@swiftpkg_xctest_dynamic_overlay//:IssueReporting",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "Clocks",
    package_name = "swift-clocks",
    srcs = [
        "Sources/Clocks/AnyClock.swift",
        "Sources/Clocks/ImmediateClock.swift",
        "Sources/Clocks/Internal/Lock.swift",
        "Sources/Clocks/Internal/_AsyncTimerSequence.swift",
        "Sources/Clocks/SwiftUI.swift",
        "Sources/Clocks/TestClock.swift",
        "Sources/Clocks/Timer.swift",
        "Sources/Clocks/UnimplementedClock.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library_group(
    name = "Clocks",
    deps = ["@swiftpkg_swift_clocks//:Clocks.rspm"],
    visibility = ["//visibility:public"],
)
